--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,9 @@
 @theme inline {
     --color-background: var(--gray-100);
     --color-font-base: var(--black);
+    
+    --color-saffron-500: var(--saffron-500);
+
     --font-sans: var(--font-geist-sans);
     --font-mono: var(--font-geist-mono);
 
