--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,12 +3,14 @@
 :root {
     --white: #fff;
     --black: #000;
-    --gray-500: #8a8a8a;
     --violet-700: #6d568f;
     --violet-500: #9c89b8;
     --violet-300: #bcafcf;
-    --gray-100: #f3f3f3;
-    --gray-300: #ccc;
+    --gray-100: #f5f5f5;
+    --gray-200: #e5e5e5;
+    --gray-300: #d5d5d5;
+    --gray-400: #c5c5c5;
+    --gray-500: #b5b5b5;
     --saffron-500: #facc69;
     --saffron-400: #fbd584;
     --saffron-300: #fde6b5;
@@ -17,13 +19,18 @@
 
     --navbar-height: 66px;
     --button-height: 52px;
-    --button-height-sm: 26px;
+    --button-height-md: 42px;
+    --button-height-sm: 32px;
 }
 
 @theme inline {
     --color-background: var(--gray-100);
     --color-font-base: var(--black);
 
+    --color-gray-100: var(--gray-100);
+    --color-gray-200: var(--gray-200);
+    --color-gray-300: var(--gray-300);
+    --color-gray-500: var(--gray-500);
     --color-saffron-500: var(--saffron-500);
     --color-saffron-400: var(--saffron-400);
     --color-saffron-300: var(--saffron-300);
@@ -36,6 +43,8 @@
 
     --spacing-navbar-height: var(--navbar-height);
     --spacing-button-height: var(--button-height);
+    --spacing-button-height-md: var(--button-height-md);
+    --spacing-button-height-sm: var(--button-height-sm);
     --radius-4xl: 32px;
 
     --shadow-status-bar: 0 -4px 12px -8px rgba(0, 0, 0, 0.25);
