--- a/src/widgets/collectionsSlider/ui/styles.css
+++ b/src/widgets/collectionsSlider/ui/styles.css
@@ -2,3 +2,25 @@
     display: flex;
     flex-shrink: 1;
 }
+
+.swiper-button-prev {
+    color: white;
+    height: 24px;
+    left: 0;
+    top: 60%;
+}
+
+.swiper-button-prev::after {
+    font-size: 24px;
+}
+
+.swiper-button-next {
+    color: white;
+    height: 24px;
+    right: 0;
+    top: 60%;
+}
+
+.swiper-button-next::after {
+    font-size: 24px;
+}
